include batch processing